# todo_core

./: .gitignore  Cargo.toml  README.md  TODO.json
docs/: new.md
src/: lib.rs  main.rs
src/args/: mod.rs
src/color_scheme/: mod.rs
src/container/: mod.rs
src/ctx/: mod.rs
src/enums/: mod.rs
src/item/: mod.rs
src/item_holder/: mod.rs
src/list/: mod.rs
src/traits/: mod.rs
src/utils/: mod.rs
