[package]
name = "todo-core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
